[ci] Told the linter to ignore some errors

--- a/.github/workflows/dockerfile.yml
+++ b/.github/workflows/dockerfile.yml
@@ -11,4 +11,8 @@ jobs:
         uses: brpaz/hadolint-action@master
         with:
           dockerfile: "debian/Dockerfile"
+          ignore: DL3005
+          ignore: DL3008
+          ignore: DL3013
+          ignore: DL3015
 
