[ci] Fixed wrong configuration of the linter

--- a/.github/workflows/dockerfile.yml
+++ b/.github/workflows/dockerfile.yml
@@ -11,8 +11,5 @@ jobs:
         uses: brpaz/hadolint-action@master
         with:
           dockerfile: "debian/Dockerfile"
-          ignore: DL3005
-          ignore: DL3008
-          ignore: DL3013
-          ignore: DL3015
+          ignore: DL3005,DL3008,DL3013,DL3015
 
